Add CostReport and integrate into app

--- a/DxBlazorReport/Shared/NavMenu.razor
+++ b/DxBlazorReport/Shared/NavMenu.razor
@@ -79,6 +79,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span>Workcenter Report
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="costreport">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Cost Report
+            </NavLink>
+        </li>
         @* <li class="nav-item px-3">
             <NavLink class="nav-link" href="workcenterreportext">
                 <span class="oi oi-list-rich" aria-hidden="true"></span>Workcenter (test) Report
