--- a/DxBlazorReport/Shared/NavMenu.razor
+++ b/DxBlazorReport/Shared/NavMenu.razor
@@ -80,8 +80,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="costreport">
-                <span class="oi oi-list-rich" aria-hidden="true"></span>Cost Report
+            <NavLink class="nav-link" href="costingreport">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Costing Report
             </NavLink>
         </li>
         @* <li class="nav-item px-3">
